--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?fjcgdd#1" target="_blank">首页</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/1?lquwsjy" target="_blank">动态网</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/2?rwhcvs" target="_blank">大纪元</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/4?auponwa" target="_blank">看中国</a> | <a href="https://d2cj9ah31kn8fl.cloudfront.net/pHh5q?vbkxd" target="_blank">新生网</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/tktpt?vnyulrqm" target="_blank">阿波罗网</a> | <a href="https://d7b58bkqqk9ju.cloudfront.net/Mjpvu?zomebwcoi" target="_blank">干净世界</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/10?eizfo" target="_blank">退党服务</a> | <a href="https://d1jex6syje0yji.cloudfront.net/Rffqf?evioskemd" target="_blank">明慧广播</a> | <a href="https://d19vw3711v9lks.cloudfront.net/nw9Vn?rnhvjaj" target="_blank">传奇时代</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/AF9AG?svrpn" target="_blank">新境界影视</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/zqMQA?phgdzbm" target="_blank">文昭谈论</a> | <a href="https://dnuodzs8nln8v.cloudfront.net/7?fmmfd" target="_blank">明慧</a></p><p><a href="https://dlvlk7o3qgp9v.cloudfront.net/9?bntpddtc" target="_blank">大法</a> | <a href="https://d78f5frq5siq8.cloudfront.net/3?nwyir" target="_blank">新唐人</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/obAhT?sjakifj" target="_blank">人民报</a> | <a href="https://d2p23c289x62lr.cloudfront.net/xXNHu?bwkwzh" target="_blank">放光明</a> | <a href="https://d78f5frq5siq8.cloudfront.net/5?tsxje" target="_blank">新纪元</a> | <a href="https://d124e4v75n9sum.cloudfront.net/6?ahxkukty" target="_blank">希望之声</a> | <a href="https://dlvlk7o3qgp9v.cloudfront.net/11?vvkczwge" target="_blank">无界网络</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/Pueji?kmruo" target="_blank">追查国际</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/16?edonojk" target="_blank">明慧之窗</a> | <a href="https://d3t1om6knkjnq4.cloudfront.net/LdvzZ?htnurhwv" target="_blank">细语人生</a> | <a href="https://d11leod1im7q2u.cloudfront.net/fBn3r?stjiygl" target="_blank">新世纪影视</a> | <a href="https://d2n08tj75ohh5.cloudfront.net/PUWMb?lvqnyf" target="_blank">江峰时刻</a> | <a href="https://d1lulvfep8g527.cloudfront.net/8?xtvaazji" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?jmquwaw#1" target="_blank">首页</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/1?rlduh" target="_blank">动态网</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/2?aggghu" target="_blank">大纪元</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/4?tofjgfuc" target="_blank">看中国</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/pHh5q?mfuweu" target="_blank">新生网</a> | <a href="https://d3gus727acem18.cloudfront.net/tktpt?zuyccmw" target="_blank">阿波罗网</a> | <a href="https://d1b0mjr6ppvor4.cloudfront.net/Mjpvu?vhplhfm" target="_blank">干净世界</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/10?haaxzkg" target="_blank">退党服务</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/Rffqf?ockiot" target="_blank">明慧广播</a> | <a href="https://d22owz1tif1d5u.cloudfront.net/nw9Vn?vdnfapxgz" target="_blank">传奇时代</a> | <a href="https://dnuodzs8nln8v.cloudfront.net/AF9AG?uepbnqe" target="_blank">新境界影视</a> | <a href="https://db8nk66phkh66.cloudfront.net/zqMQA?fapkhaufm" target="_blank">文昭谈论</a> | <a href="https://d18bx7gz18d1cs.cloudfront.net/7?vnooku" target="_blank">明慧</a></p><p><a href="https://d3qwx9e7uaergm.cloudfront.net/9?nxcdfoyli" target="_blank">大法</a> | <a href="https://d3bo5docy69ast.cloudfront.net/3?lelcywsw" target="_blank">新唐人</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/obAhT?gpbqzwy" target="_blank">人民报</a> | <a href="https://d3q99y09eaol9n.cloudfront.net/xXNHu?zeanz" target="_blank">放光明</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/5?oxqwhwo" target="_blank">新纪元</a> | <a href="https://dnfbwsos78njn.cloudfront.net/6?nxpkioqno" target="_blank">希望之声</a> | <a href="https://d3myewunzonann.cloudfront.net/11?igaxol" target="_blank">无界网络</a> | <a href="https://d239x61949z6p.cloudfront.net/Pueji?hvchzr" target="_blank">追查国际</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/16?idoeh" target="_blank">明慧之窗</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/LdvzZ?epzgj" target="_blank">细语人生</a> | <a href="https://d239x61949z6p.cloudfront.net/fBn3r?ltibvk" target="_blank">新世纪影视</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/PUWMb?crvobk" target="_blank">江峰时刻</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/8?zcjdbe" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689699.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2026/02/id14689700-AFP__20260202__2259636263__v1__MidRes__PresidentTrumpAnnouncesTheCreationOfTheUSStra-320x200.jpg"><p align="center">川普宣布启动稀土等关键矿产储备计划</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689699.md#1" title="川普宣布启动稀土等关键矿产储备计划""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14689700-AFP__20260202__2259636263__v1__MidRes__PresidentTrumpAnnouncesTheCreationOfTheUSStra-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689646.md#1" title="比亚迪销量降三成 股价暴跌 汽车股普降""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/08/id14572847-GettyImages-2211814122-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689305.md#1" title="哥斯达黎加大选 保守派费尔南德斯获胜""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14689379-GettyImages-2258960294-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689308.md#1" title="日本从六千米深海试掘 成功采集大量稀土泥""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/09/id14603134-GettyImages-2170355153-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689600.md#1">【音乐】2025飞天艺术学院器乐大赛选播（2）｜首播：美东时间2026年2月7日</a><br>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689654.md#1">相隔一年 袁惟仁与大S同日病逝 两人缘分曝光</a><br>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689680.md#1">国土安全部：明州所有一线ICE人员将配记录仪</a><br>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689585.md#1">英国安德鲁王子被曝与中共党魁关系密切</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689699.md#1">川普宣布启动稀土等关键矿产储备计划</a><br>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689673.md#1">泰国军方：柬埔寨诈骗窝点查获大量证据</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689688.md#1">被ICE拘留的非法移民及其五岁儿子返回明州</a><br>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689694.md#1">【重播】众院民主党领袖杰弗里斯举行记者会</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689677.md#1">华人非法移民在意大利夺枪袭警 酿街头交火</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689662.md#1">【唐青看时事】英加押宝中共 与虎谋皮</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689600.md#1">【音乐】2025飞天艺术学院器乐大赛选播（2）｜首播：美东时间2026年2月7日</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689654.md#1">相隔一年 袁惟仁与大S同日病逝 两人缘分曝光</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689680.md#1">国土安全部：明州所有一线ICE人员将配记录仪</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689585.md#1">英国安德鲁王子被曝与中共党魁关系密切</a><br>
+:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689699.md#1">川普宣布启动稀土等关键矿产储备计划</a><br>
+:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689673.md#1">泰国军方：柬埔寨诈骗窝点查获大量证据</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689688.md#1">被ICE拘留的非法移民及其五岁儿子返回明州</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689694.md#1">【重播】众院民主党领袖杰弗里斯举行记者会</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689677.md#1">华人非法移民在意大利夺枪袭警 酿街头交火</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689662.md#1">【唐青看时事】英加押宝中共 与虎谋皮</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688660.md#1">金价大跳水 大陆投资者经历从赚5万到倒贴4万</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688457.md#1">印度学者：张又侠落马直接影响中共21大</a><br>
@@ -107,8 +107,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14683223.md#1">张又侠和刘振立落马 海外专家学者怎么看</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14683154.md#1">北京政变传闻再起 “局势随时突变”</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14683035.md#1">实战派张又侠刘振立落马 分析：重创中共军力</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3nhx111pd7sdl.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d3nhx111pd7sdl.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 39,403</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d38jih00ltofcg.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d38jih00ltofcg.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d38jih00ltofcg.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 39,403</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
@@ -122,12 +122,12 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/3/25/n14466392.md#1">【内幕】中国大基建如何成为贪腐提款机</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/3/20/n14462776.md#1">【内幕】李嘉诚卖巴拿马港口涉中共高层政争</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/3/7/n14453270.md#1">【独家】防火墙下的博弈 中国多少人在翻墙</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638268.md#1">走过黎明前黑暗的年代（下）</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14630165.md#1">【古道人生】坠水失踪二十年 原来去了桃花源</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/9/1/n14585025.md#1">【洪秀全传】（1）晚清政论预言</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639204.md#1">修女画家普劳蒂拉?内莉的《最后的晚餐》</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/11/9/n14632198.md#1">独立天地间：鲁仲连的高士风骨</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/4/6/n14476164.md#1">从故事学典故：范增举玦 羊祜探环</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14636773.md#1">小雪节气天气上升地气下降  不要掉以轻心</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638279.md#1">《论语》说（98）：勇敢的子路为何怕闻道理？</a><br>
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646583.md#1">“退让”是软弱吗？炫耀者为何感到羞愧？</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/12/11/n14653064.md#1">【未解之谜】森林小仙女预言地球未来</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/12/11/n14653060.md#1">2025年新唐人全世界人物写实油画大赛入围作品赏析——《寡妇的两文钱》</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651758.md#1">圣墓之旅：耶路撒冷圣地珍宝闪亮纽约</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/5/10/n14504111.md#1">唐代文明史?美术</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645020.md#1">春秋五霸楚庄王为何能一鸣惊人一飞冲天？</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/5/3/n14497653.md#1">【品读唐诗】千古绝唱 元稹悼亡诗</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/1992513/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
